--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -15,21 +15,33 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  
-  # This workflow contains a single job called "build"
-  build:
+
+  # Provision Azure services required by the app
+  provision:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    steps:
+      - name: Repo Check-out
+        uses: actions/checkout@v3
+
+      - name: Azure Authentication
+        uses: azure/login@v1
+        with:
+          creds: ${{secrets.AZURE_CREDENTIALS}}
+          enable-AzPSSession: true 
+      
+      - name: Deploy Azure App Services
+        uses: azure/powershell@v1
+        with:
+          inlineScript: |
+            .\src\ps\app-service-deploy.ps1
+
+  # This workflow contains a single job called "build"
+  build:
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      - name: provision-azure
-        shell: pwsh
-        run: |
-          .\src\ps\app-deploy.ps1
       
       # Runs a single command using the runners shell
       - name: Run a one-line script
