--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -13,12 +13,13 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
 
   # Provision Azure services required by the app
   provision:
-  
+
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -40,6 +41,9 @@ jobs:
 
   # This workflow contains a single job called "build"
   build:
+
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
