--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -43,6 +43,8 @@ jobs:
   # This workflow contains a single job called "build"
   build:
 
+    needs: provision
+
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
